# R2D2-RL

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  SIM_WRIST_CAMERA_README.md  THIRD_PARTY_ASSET_LICENSES.md  calibrate_colors.py  camera_calib.npz  conftest.py  controller.py  pyproject.toml  requirements.txt  scene.xml  so101_env.py
.github/workflows/: ci.yaml  cpp.yaml  docs.yml
OUR_stuff/: COMPARISON.md  README.md
OUR_stuff/RL_envs/: rotation_utils.py
OUR_stuff/control/: __init__.py  waypoint_controller.py
OUR_stuff/docs/: CODEBASE_AUDIT_hybrid_control_rl.md  RCS_OVERLAP_AUDIT.md
OUR_stuff/envs/: __init__.py
OUR_stuff/estimation/: __init__.py  pixel_to_table.py
OUR_stuff/scripts/: Cam_workflow.py  render_project3_screenshot.py  run_hybrid_eval_sim.py  test_rcs_so101_sim.py  test_wrist_camera_feed.py  validate_pixel_to_table.py
OUR_stuff/tests/: __init__.py  test_color_detector_synthetic.py  test_hybrid_task_executor.py  test_hybrid_waypoint_planner.py  test_pixel_to_table_projection.py
RL_envs/: so100_mdp_utils.py
assets/: camera.xml  cubes_2cm.xml  ground.xml  lights.xml  scene_linker.xml  so101.xml
ci_scripts/: build_versioned_docs.py
configs/hybrid_control_rl/: eval2.yaml
docker/: Dockerfile  README.md  link-editable-source.sh
docker/compose/: dev.yml
docs/: index.md
docs/_static/: version_switcher.json
docs/api/: index.md
docs/extensions/: rcs_fr3.md
docs/getting_started/: index.md
docs/user_guide/: conventions.md  gym_interface.md  index.md
env/: Camera_adjust_online.py  Environment.py  Visual_Preprocessing.py  camera_config.py  env_factory.py  randomize_Cube_pos.py
estimation/: block_belief.py
examples/fr3/: fr3_direct_control.py  fr3_env_cartesian_control.py  fr3_env_joint_control.py  fr3_readme.py  grasp_demo.py  grasp_ompl_demo.py
examples/rpc_server_client/: rpc_run_server.py
examples/so101/: so101_env_cartesian_control.py  so101_env_joint_control.py
examples/teleop/: README.md  franka.py  quest_align_frame.py  quest_iris_dual_arm.py  requirements.txt
examples/ur5e/: ur5e_env_cartesian_control.py  ur5e_env_joint_control.py
examples/xarm7/: xarm7_env_cartesian_control.py  xarm7_env_joint_control.py
extensions/rcs_fr3/: README.md  pyproject.toml
extensions/rcs_panda/: CMakeLists.txt  pyproject.toml
extensions/rcs_panda/src/rcs_panda/: __init__.py  configs.py  creators.py  desk.py  envs.py  panda_env_cartesian_control.py  panda_env_joint_control.py  utils.py
extensions/rcs_panda/src/rcs_panda/_core/hw/: __init__.pyi
extensions/rcs_realsense/: README.md
extensions/rcs_robotics_library/: CMakeLists.txt  pyproject.toml
extensions/rcs_robotics_library/src/rcs_robotics_library/_core/: __init__.pyi
extensions/rcs_robotiq2f85/: README.md  pyproject.toml
extensions/rcs_robotiq2f85/src/rcs_robotiq2f85/: hw.py
extensions/rcs_so101/: CMakeLists.txt  pyproject.toml
extensions/rcs_so101/src/rcs_so101/: __init__.py  creators.py  hw.py
extensions/rcs_so101/src/rcs_so101/_core/: __init__.pyi
extensions/rcs_tacto/: pyproject.toml
extensions/rcs_ur5e/: pyproject.toml
extensions/rcs_xarm7/: pyproject.toml
extensions/rcs_xarm7/src/rcs_xarm7/: __init__.py  configs.py  creators.py  env_grasp.py  hw.py
extensions/rcs_zed/: pyproject.toml
extensions/rcs_zed/src/rcs_zed/: __main__.py  camera.py  utils.py
extensions/rcs_zed/tests/: test_zed_extension.py
include/rcs/: Camera.h  Robot.h
perception/: color_block_detector.py
project3_modular/configs/: task1.yaml  workspace.yaml
project3_modular/control/: ee_delta_motion.py  ee_motion.py  ee_target_motion.py  poses.py  robot_session.py
project3_modular/models/: pregrasp_joint_regressor.py
project3_modular/perception/: coordinate_transform.py  cube_detector.py  homography.py  multiview_cube_localizer.py
project3_modular/rl_grasp/: teleop_utils.py
project3_modular/scripts/: calibrate_table_mapping.py  capture_observation_image.py  capture_observation_scan.py  collect_bowl_transfer_dataset.py  collect_pregrasp_dataset.py  live_camera_view.py  rollout_task1_goalconditioned_act.py  run_task1_pipeline.py  scan_and_localize_cube.py  test_bowl_transfer_regressor.py  test_cube_detection.py  test_homography_calibration.py  test_move_to_pregrasp.py  test_move_to_pregrasp_delta.py  test_pregrasp_regressor.py  train_bowl_transfer_regressor.py  train_pregrasp_regressor.py
python/rcs/: __init__.py  __main__.py  common_typing.py  lerobot_joint_converter.py  sim_state_replay.py  utils.py
python/tests/: test_common.py  test_kinematics.py  test_multi_sim.py  test_pick_task_wrapper.py  test_replayer.py  test_rpc.py  test_sim_envs.py  test_sim_state_record_replay.py
r2d2_rl/: README.md  __init__.py
r2d2_rl/RL_envs/: cartpole_wrapper.py  grid_world.py  networks.py  so100_rl_env.py
r2d2_rl/control/: pregrasp_joint_regressor.py  waypoint_controller.py
r2d2_rl/docs/: DEMO_PRESENTATION_OUTLINE.md  DEMO_RUNBOOK.md  HYBRID_CONTROL_RL_TRAJECTORY_SPEC_REVISED.md
r2d2_rl/envs/: project3_so101_env.py
r2d2_rl/hybrid_control_rl/: __init__.py  config.py
r2d2_rl/patches/: README.md  rcs_so101_project3.patch
r2d2_rl/perception/: __init__.py
r2d2_rl/planning/: __init__.py  hybrid_waypoint_planner.py
r2d2_rl/rl/: __init__.py  align_grasp_env.py  lerobot_align_grasp_env.py  lerobot_compat.py  replay_buffer.py  sac.py  visual_replay_buffer.py  visual_sac.py
r2d2_rl/runtime/: __init__.py  learned_align_grasp_policy.py  lerobot_visual_align_grasp_policy.py  rcs_sim_adapters.py  sb3_visual_align_grasp_policy.py
r2d2_rl/scripts/: pid_control.py  render_project3_screenshot.py  run_eval_sequence.py  (+10 more)
runtime/: hybrid_task_executor.py
scripts/: Cam_calibration.py  Cam_workflow.py  Data_Generator.py  Model.py  Model_RL.py  bbox_client.py  generate_common_typing.py  main.py  render_project3_screenshot.py  replay_sim_trajectory.py  run_hybrid_eval_sim.py  test_wrist_camera_feed.py  validate_pixel_to_table.py
tests/: test_color_detector_synthetic.py  test_hybrid_task_executor.py  test_hybrid_waypoint_planner.py  test_waypoint_controller.py
(+326 files in other folders)
