[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rcs_robotiq2f85"
version = "0.6.3"
description="RCS RobotiQ module"
dependencies = [
    "rcs>=0.6.3",
    "2f85-python-driver @ git+https://github.com/RobotControlStack/2f85-python-driver.git",
]
readme = "README.md"
maintainers = [
  { name = "Tobias Jülg", email = "tobias.juelg@utn.de" },
]
authors = [
  { name = "Tobias Jülg", email = "tobias.juelg@utn.de" },
]
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
