[build-system]
requires = [
  "build",
  "wheel",
  "setuptools>=60",
  "scikit-build-core>=0.3.3",
  "pybind11",
  "cmake",
  "ninja",
]
build-backend = "scikit_build_core.build"

[project]
name = "rcs_so101"
version = "0.6.3"
description = "RCS SO101 module"
dependencies = ["rcs>=0.6.3", "lerobot==0.3.3"]
readme = "README.md"
maintainers = [{ name = "Tobias Jülg", email = "tobias.juelg@utn.de" }]
authors = [{ name = "Tobias Jülg", email = "tobias.juelg@utn.de" }]
requires-python = ">=3.11"

[tool.scikit-build]
build.verbose = true
build.targets = ["_core"]
logging.level = "INFO"
build-dir = "build"
wheel.packages = ["src/rcs_so101"]
install.components = ["python_package"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
