[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rcs_xarm7"
version = "0.6.3"
description = "RCS xArm7 module"
dependencies = ["rcs>=0.6.3", "xarm-python-sdk==1.17.0"]
readme = "README.md"
maintainers = [
  { name = "Tobias Jülg", email = "tobias.juelg@utn.de" },
  { name = "Ken Nakahara", email = "knakahara@lasr.org" },
]
authors = [
  { name = "Tobias Jülg", email = "tobias.juelg@utn.de" },
  { name = "Ken Nakahara", email = "knakahara@lasr.org" },
]
requires-python = ">=3.11"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
